Complete rework of site structure

--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minecraft Recipes</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Legendary Realism</title>
 </head>
 <body>
-    <h1>Minecraft Custom Recipes</h1>
-    <div id="recipe-container"></div>
-    <script src="scripts.js"></script>
+    <h1>Welcome to Legendary Realism</h1>
+    <p><a href="items.html">View Custom Items and Recipes</a></p>
 </body>
 </html>
