--- a/recipe.html
+++ b/recipe.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Recipe Details</h1>
     <div id="recipe-container"></div>
-    <a href="index.html">Back to All Recipes</a>
+    <a href="items.html">Back to Custom Items</a>
     <script src="scripts.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
