--- a/vanilla_items.html
+++ b/vanilla_items.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Vanilla Items</h1>
-    <p>These are standard Minecraft items. For more information, visit the <a href="[invalid url, do not cite] Wiki</a>.</p>
-    <a href="items.html">Back to Custom Items</a>
+    <p>These are standard Minecraft items. For more information, visit the <a href="https://minecraft.wiki/">Minecraft Wiki</a>.</p>
+    <a href="/Legendary-Realism/items.html">Back to Custom Items</a>
 </body>
 </html>
