--- a/items.html
+++ b/items.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Custom Items</title>
+    <title>Legendary Realism - Custom Items</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Custom Items</h1>
-    <ul>
-        <li><a href="recipe.html?recipe=ocean_sediment">Ocean Sediment</a></li>
-        <li><a href="recipe.html?recipe=fire">Fire</a></li>
-        <li><a href="recipe.html?recipe=sediment_chunk">Sediment Chunk</a></li>
-    </ul>
+    <ul id="recipe-list"></ul>
     <a href="index.html">Back to Main Page</a>
+    <script src="scripts.js"></script>
 </body>
 </html>
