--- a/items.html
+++ b/items.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Custom Items</h1>
-    <ul id="recipe-list"></ul>
+    <div id="recipe-list"></div>
     <a href="index.html">Back to Main Page</a>
     <script src="scripts.js"></script>
 </body>
