--- a/items.html
+++ b/items.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Legendary Realism - Custom Items</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="/Legendary-Realism/favicon.ico">
 </head>
 <body>
     <h1>Custom Items</h1>
